--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>LASF21（仮）</title>
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-<h1>"Hello, world!"</h1>
+<h1><span class="bookmark-o"></span>Hello, world!</h1>
 </body>
 </html>
