Committer: Nichiyo Nakahara <nichiyo.dev@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ja>
 <head>
 <meta charset="utf-8">
-<title>LASF21（仮）</title>
+<title>LASF21</title>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-<h1><span class="bookmark-o"></span>Hello, world!</h1>
+<h1><span class="fa fa-bookmark-o fa-lg"></span>Hello, world :-)</h1>
 </body>
 </html>
