--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="ja>
+<html lang="ja">
 <head>
-<meta charset="utf-8">
-<title>LASF21</title>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <title>SundayBoy</title>
+    <style>
+        p {
+            font-size: 50px;
+            background-image: -webkit-gradient(
+                  linear
+                , left top
+                , left bottom
+                , from(#ffffff)
+                , color-stop(0.49, #f7ffff)
+                , color-stop(0.50, #f3ffff)
+                , to(#00ffff));
+        }
+    </style>
 </head>
 <body>
-<h1><span class="fa fa-bookmark-o fa-lg"></span>Hello, world :-)</h1>
+    <main>
+        <p>sorry, under construction...</p>
+    </main>
+    <footer>
+        &copy; 2015 Nichiyo Nakahara
+    </footer>
 </body>
 </html>
